<resources>
    <string name="app_name">Finance Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="new_finance">New Finance</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="isIncome">Is Income</string>
    <string name="firstDate">First Date</string>
    <string name="frequency">Frequency</string>
    <string name="Categories">Categories</string>
    <string name="Diagram">Diagram</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="watch_profits">WATCH  PROFITS</string>
    <string name="balance">Balance:</string>
    <string name="search_for_categories">Search for categories</string>
    <string name="search">Search</string>
    <string name="watch_spending">WATCH SPENDING</string>
    <string name="watch_earning">WATCH EARNING</string>
    <string-array name="category_items">
        <item>Food</item>
        <item>Housing</item>
        <item>Bill</item>
        <item>Entertainment</item>
        <item>Saving</item>
        <item>Health Care</item>
        <item>Personal Care</item>
        <item>Consumer Debt</item>
        <item>Other</item>
        <item>Wage</item>
    </string-array>
    <string-array name="frequency_array">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>
